# polish-real-estate-price-aggregates

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  coverage.json  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: sources.example.yaml
data/public/: README.md  estate_public_data_quality_20260519T071853818654Z.csv  estate_public_data_quality_20260521T102526539256Z.csv  estate_public_data_quality_20260521T121529135028Z.csv  estate_public_ml_features_20260519T071853818654Z.csv  estate_public_ml_features_20260521T102526539256Z.csv  estate_public_ml_features_20260521T121529135028Z.csv
docker/: ingestion-loop.sh  run-ingestion.sh
docs/: README.md  component-diagram.md  data-model-overview.md  data-pipeline.md  docker.md  ethics.md  etl-sequence.md  ingestion-sequence.md  market-ranking.md  source-configuration.md  system-context.md
scripts/: update_coverage_badge.py
src/: __init__.py  app.py
src/analytics/: __init__.py  market_ranking.py
src/config/: __init__.py  env.py  globals.py  source_config.py  types.py
src/etl/: __init__.py  demo.py  gold.py  public.py  silver.py
src/ingestion/: __init__.py  estate_ingestion.py  models.py  parsing.py  (+4 more)
tests/: __init__.py  test_adapters.py  test_cli.py  test_demo_etl.py  test_estate_ingestion.py  test_estate_scraper.py  test_gold_etl.py  test_logger.py  test_market_ranking.py  test_public_etl.py  test_registry.py  test_sharding.py  test_silver_etl.py  test_source_config.py  test_storage.py  test_transport.py
(+18 files in other folders)
