[project]
name = "polish-real-estate-price-aggregates"
version = "0.1.0"
description = "Data pipeline for Polish real estate listing aggregates and anonymized public datasets."
readme = "README.md"
authors = [
    { name = "Jakub Bielecki" },
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "mypy>=2.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.14.8",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
py_version = 310

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = false
